# KGVerifyPy

./: .gitignore  README.adoc  README.md  exploring_results.py  main.py  pyproject.toml  run_gui.bat  setup.bat
src/kgverifypy/: __init__.py  csv_utilites.py  csv_utilities.py  data_handler.py  datatype_enrichment.py  file_config.json  file_handling.py  gui.py  gui_utilites.py  information.py  log_config.py  namespaces.py  shacl_validation.py  validation_service.py
tests/: test_csv_utilities.py  test_data_handler.py  test_file_handling.py  test_gui.py  test_gui_utilities.py  test_namespaces.py  test_validation_service.py
