[project]
name = "kgverifypy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kgraphpy",
    "pyshacl>=0.31.0",
]

[tool.uv.sources]
kgraphpy = { git = "ssh://git@github.com/statnett/KGraphPy.git", rev = "main" }

[tool.setuptools]
packages = ["src/kgverifypy"]

[tool.setuptools.package-data]
kgverifypy = ["*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
