[project]
name = "kgverifypy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kgraphpy @ git+https://github.com/statnett/KGraphPy.git@main",
    "pyshacl>=0.31.0",
]

[tool.setuptools]
packages-dir = ["" = "src"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kgverifypy = ["*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
